<resources>
    <string name="app_name">PocketTad</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="webpage">WebPage</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="add_requiement">Add Requiement</string>
    <string name="add_todo">Add ToDo</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="dead_line">Dead Line</string>
    <string name="title_activity_incomming_event">MainActivity</string>
    <string name="title_activity_incomming_events">IncommingEventsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="incomming_todo">Incomming ToDo</string>
    <string name="incomming_requirement">Incomming Requirement</string>
    <string name="subject_list">Subject List</string>
</resources>